[package]
name = "rate-gate"
version = "0.1.2"
edition = "2021"
description = "Easy and thread-safe rate limiter"
license = "MIT"
repository = "https://github.com/FreerGit/rate-gate.git"
readme = "README.md"
keywords = ["rate-limit", "limit" , "limiting", "rate", "rate-gate"]

[dependencies]
hashbrown = "0.14.5"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"]}
tokio = { version = "1", features = ["full"] }